# vcalc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SCalcConfig.json
cmake/: antlr_generate.cmake
grammar/: SCalc.g4  VCalc.g4
include/: ARM.h  BackEnd.h  Interpreter.h  RISCV.h  StringInterface.h  X86.h  ast.hpp  ast_dumper.hpp  ast_generator.hpp  valc_dialect.hpp
src/: ARM.cpp  BackEnd.cpp  CMakeLists.txt  Interpreter.cpp  RISCV.cpp  X86.cpp  main.cpp
tests/: SCalcConfigCS.json  SCalcConfigInterpreterOnly.json  VCalcConfig.json
tests/input/: s0_loop.in  s1_compare.in  s2_if_stat.in  s3_gen.in  s4_complex_var_or_exp.in  s5.1.in  s5.2.in  s5.3.in  s6.1.in  s6.2.in  s6.3.in  s6.4.in  s6.5.in  s7.1.in  s7.2.in  v01_def.in  v02_generator.in  v03_filter.in  v04_expr.in  v04_idx.in
tests/input/ejs/: test1.in  test2.in  test3.in
tests/output/ejs/: test1.out  test2.out
